--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -4,239 +4,188 @@ output:
   html_document:
     keep_md: true
 ---
-## Introduction
-
-This is an R Markdown document, created for the Coursera course "Reproducible Research", in completion of "Peer Assessment 1". The assignment requires students to write an R markdown document evidencing literate programming, using markdown and R programming techniques. There are 5 primary questions to be answered, dealing with processing and analysing data. The data provided to be worked upon, is called "activity monitoring data".
-
-### The Data
-
-The data provided for use, is derived from a study whereupon a single individual wore a "personal activity monitoring device". The study says that:
-
-> "[Activity monitoring devices] are part of the “quantified self” movement – a group of enthusiasts who take measurements about themselves regularly to improve their health, to find patterns in their behavior, or because they are tech geeks. But these data remain under-utilized both because the raw data are hard to obtain and there is a lack of statistical methods and software for processing and interpreting the data."
-
-The device used in this particular data set collects data on the number of steps taken by an individual, in 5 minute intervals. Two months of data, October/November 2012 are included within the data set. The variables measured include steps (the number of steps taken), date (the day on which the steps measurement was taken) and interval, (the interval in which the steps measurement was taken.) The data is stored in csv format, with 17,598 observations and the aforementioned 3 variables recorded.
-
-## Completing the Assignment
-
-### Question 1: Loading and preprocessing the data
-
-The data must be in the user's current working directory for the code to run correctly. The unzip function extracts the data from the zip file, before it is read into R. The object classes contained within each of the variables are defined, so as to speed up the reading process.
-
-```{r} 
-unzip("activity.zip")
-initialData <- read.csv("activity.csv", colClasses=c("numeric", "Date", "numeric"))
-```
-
-An initial look at the data confirms its dimensions and contents.
-
-```{r} 
-head(initialData)
-str(initialData)
-```
-
-### Question 2: What is mean total number of steps taken per day?
-
-The question states any missing values in the data set can be ignored. From using the summary functions previously, it is already known that there are NA values within the steps variable, so these can be removed now.
-
-```{r}
-data <- initialData[!(is.na(initialData$steps)), ]
-```
-
-To calculate the total number of steps taken per day, the data first needs to be grouped separately for each day, and then the sum of each group calculated. The aggregate function can complete both of these steps, and format the output in a tidy data frame.
-
-```{r}
-totalStepsDay <- aggregate(steps ~ date, data, sum)
-head(totalStepsDay)
-```
-
-Creating exploratory plots are useful to be able to quickly see a view of all of the data, and pick out any potential patterns. Here, a histogram is created to indicate the frequency of total steps taken each day.
 
 
-```{r}
-paletteBlue <- colorRampPalette(c("skyblue", "darkblue", "skyblue"))
-hist(totalStepsDay$steps, breaks=20, xlab="Number of Steps Taken", 
-     main="Histogram of the Total Number of Steps Taken per Day",
-     col=paletteBlue(22), family="serif")
-```
+##Used librarys is this assignment
 
-Finally, the summarise function can calculate the mean and median values of the total number of steps taken per day.
-
-```{r, message=FALSE}
+```{r, load packages, results='hide', message=FALSE, warning=FALSE}
+library(readr)
 library(dplyr)
-totalStepsSummary <- summarise(totalStepsDay, meanOfTotalSteps=mean(totalStepsDay$steps),
-                               medianOfTotalSteps=median(totalStepsDay$steps))
-print(totalStepsSummary)
+library(ggplot2)
 ```
 
-Therefore the mean value calculated is **10766.19**, and the median value **10765**.
+## Loading and preprocessing the data
+First we load the data via readr. It is stored in a variable called 'activity'.
+We use the library readr for this task.
 
-### Question 3: What is the average daily activity pattern?
+```{r, cache=TRUE, echo = TRUE, results='hide',message=FALSE}
+activity <- read_csv("activity.csv")
+```
 
-To look at the average daily pattern, we can use another exploratory graph, this time a time series plot. As this plot should look at the average number of steps taken for each interval, (utilising all days), the aggregate function must be used again, to split the data into groups for each interval, and then averaged with the mean function.
+Let's have a look at the first 10 lines after reading the dataset.
+
+```{r,echo = TRUE}
+head(activity)
+```
+
+## What is mean total number of steps taken per day?
+First we calculate the number of steps per day, then the resulting mean. We are using the dplyr package for the calculation.
+
+```{r,echo = TRUE}
+steps_daily<-
+          activity%>%
+          group_by(date)%>%
+          summarise(steps_day = sum(steps, na.rm = TRUE))
+```
+### Make a histogram of the total number of steps taken each day
+Therefore we are using the 'hist()' function from base-r. In this case, it was convenient to plot 20 bars. We can see, that there are serveral missing values.
 
 ```{r}
-meanStepsInterval <- aggregate(steps ~ interval, data, mean)
-head(meanStepsInterval)
+hist(steps_daily$steps_day ,breaks = 20)
 ```
 
-The base R plotting system is used to create a time series plot, with each interval on the x axis, and the average steps data on the y axis.
+### Calculate and report the mean and median total number of steps taken per day
 
-```{r}
-plot(x=meanStepsInterval$interval, y=meanStepsInterval$steps, type="l",
-     main="Time Series Plot of Average Steps Taken per Interval",
-     ylab="Number of Steps", xlab="Intervals (in 5 mins)",
-     col="darkblue", lwd=1.5, family="serif")
+```{r, echo = TRUE}
+steps_daily_mean = mean(steps_daily$steps_day)
+steps_daily_med = median(steps_daily$steps_day)
+
 ```
 
-The last part of this question asks "which five minute interval contains the maximum number of steps?" To answer this the max function can be used, which prints out the maximum value from a numeric vector.
+The mean of steps taken per day is `r round(steps_daily_mean,2)`
+The median of steps taken per day is `r round(steps_daily_med,2)`
 
-```{r}
-meanStepsInterval[grep(max(meanStepsInterval$steps), meanStepsInterval$steps), ]
+## What is the average daily activity pattern?
+For this task, we calculate the average steps per interval, then we use ggplot2 to show the findings.
+
+```{r, warning=FALSE, message=FALSE}
+steps_interval <-
+          activity%>%
+          group_by(interval)%>%
+          summarize(steps_interval_mean = mean(steps, na.rm = T))
+ggplot(steps_interval, aes(x=interval, y= steps_interval_mean))+
+          geom_col()+
+          theme_bw()
 ```
 
-So the interval with the maximum number of steps is interval **835**.
+The interval with the maximum steps is interval number 104:
 
-### Question 4: Imputing missing values
-
-As the data can be confirmed to contain some NA values as some of the observations:
-
-```{r}
-anyNA(initialData)
+```{r,maxsteps interval}
+which(steps_interval$steps_interval_mean == max(steps_interval$steps_interval_mean))
 ```
 
-It is necessary to find out whether the NA values are more-so clustered to one area within the data. Looking at each of the variables:
+And if we take line number 104 out of the dataset, we get:
 
-```{r}
-data.frame(steps=sum(is.na(initialData$steps)), 
-           interval=sum(is.na(initialData$interval)), 
-           date=sum(is.na(initialData$date)))
+```{r, lineinterval}
+steps_interval[104,]
 ```
 
-It can be seen that all 2304 NA values are contained within the steps variable.
+So to speak, interval 835 is the max-one we are looking for.
 
-Therefore an imputing strategy must be devised to replace all of these missing values with usable numeric measurements. To do so, I decided to replace each missing value with the mean value for the same interval, averaged across all days.
+## Imputing missing values
+### Calculate and report the total number of missing values in the dataset
+Lets find missing values in die Dataset. 
+```{r, missing}
+summary(activity)
+any(is.na(activity$date))
+any(is.na(activity$interval))
+steps_na <- sum(is.na(activity$steps))
 
-I used a for loop to achieve this, first testing if each observation was an NA value, and if so, replacing it with the mean average for that interval, (as calculated in a previous question).
-
-```{r}
-imputedData <- initialData
-for(x in 1:17568) {
-    if(is.na(imputedData[x, 1])==TRUE) {
-        imputedData[x, 1] <- meanStepsInterval[meanStepsInterval$interval %in% imputedData[x, 3], 2]
-    }
-}
-head(imputedData)
 ```
 
-Now that the NA values have been replaced, a histogram from the imputed data can be created. This histogram should indicate the frequency of the total number of steps taken per day. Therefore again, the data must be grouped and "summed" by day.
+As you can see, only the variable 'steps' has missing values.It counts up to `r steps_na`
 
-```{r}
-imputedTotalStepsDay <- aggregate(steps ~ date, imputedData, sum)
-head(imputedTotalStepsDay)
+### Filling in all of the missing values in the dataset
+For filling in missig values we use the value for the mean steps of the interval instead of NAs.
+With this strategy, we imputate the missing data.
+```{r, imputation}
+#mean of the interval
+interval_mean <- 
+          activity%>%
+          group_by(interval)%>%
+          summarise(meansteps_interval = mean(steps, na.rm = T))
+# connect the activity dataframe with interval_mean by interval
+activity_merged<- merge(activity, interval_mean, by = "interval")
+
+      
+```
+###Create a new dataset
+```{r, dataset imp}
+# if steps are NA, then take the step-value from meansteps_interval, if not, keep origin-value
+activity_imp <-
+          activity_merged%>%
+          mutate(steps_imp = case_when(
+                    is.na(steps) ~ meansteps_interval,
+                    !is.na(steps) ~ steps
+          ))
+```
+###histogram of the total number of steps taken each day with imputed values
+For the histogram, we make use of the previous hisplot and took in the new variables, which we generated in the last two steps
+```{r, ggplot hist2}
+steps_daily_imp<-
+          activity_imp%>%
+          group_by(date)%>%
+          summarise(steps_day = sum(steps_imp, na.rm = TRUE))
+hist(steps_daily_imp$steps_day, breaks = 20)
+
+
+```
+We now get new values for the mean and median steps per day:
+```{r, echo = TRUE}
+steps_daily_mean_imp = mean(steps_daily$steps_day)
+steps_daily_med_imp = median(steps_daily$steps_day)
+
 ```
 
-Creating the histogram:
+The mean of steps taken per day is `r round(steps_daily_mean_imp,2)`
+The median of steps taken per day is `r round(steps_daily_med_imp,2)`
 
-```{r}
-paletteRed <- colorRampPalette(c("deeppink", "darkred", "deeppink"))
-hist(imputedTotalStepsDay$steps, breaks=20, xlab="Number of Steps Taken", 
-     main="Histogram of Total Number of Steps Taken per Day (With Imputed Values)",
-     col=paletteRed(22), family="serif")
+Before the imputation of missing values, the mean steps taken per day were `r round(steps_daily_mean,2)` and the median was `r round(steps_daily_med,2)`
+So to speak, the median and the mean were higher after the imputation.
+
+## Are there differences in activity patterns between weekdays and weekends?
+For this task we should use the imputated interval-data.
+We now calcultate the weekday with the help of the date.
+Because of my mother tongue, the weekdays are a german translation.
+
+```{r, weekdays}
+activity_imp_weekdays<-
+          activity_imp%>%
+          mutate(weekday = weekdays(date))
+#now we need to factorize the weekdays, so that the week is starting with monday.
+table(activity_imp_weekdays$weekday)
+activity_imp_weekdays$weekday <- factor(activity_imp_weekdays$weekday, levels = c("Montag",
+                                                                                  "Dienstag",
+                                                                                  "Mittwoch",
+                                                                                  "Donnerstag",
+                                                                                  "Freitag",
+                                                                                  "Samstag",
+                                                                                  "Sonntag"))
 ```
 
-The question then asks for calculation of the mean and median total number of steps taken per day, which can be calculated using the summarise function.
-
-```{r}
-imputedStepsSummary <- summarise(imputedTotalStepsDay, 
-                                 meanOfTotalSteps=mean(imputedTotalStepsDay$steps), 
-                                 medianOfTotalSteps=median(imputedTotalStepsDay$steps))  
-print(imputedStepsSummary)
+We then create a new variable, which indicates if the day is a weekday or a weekend
+```{r, weekends}
+activity_imp_weekends<-activity_imp_weekdays%>%
+          mutate(weekend_weekday = case_when(
+                    weekday %in% c("Samstag", "Sonntag") ~ "weekend",
+                    TRUE ~ "weekday"
+          ))
 ```
 
-This a similar calculation to the one completed at the start of the assignment, (without the imputed values,) and thus they can be compared.
+Now we can calculate the average steps in the intervals, when giving notice to the weekdays
 
-```{r}
-rbind(totalStepsSummary, imputedTotalStepsSummary)
+```{r, steps weekdays intervals}
+activity_imp_weekends_plot<-
+          activity_imp_weekends%>%
+          group_by(weekend_weekday, interval)%>%
+          summarize(steps_weekdays_interval = mean(steps_imp))
+
 ```
 
-The values of the two data sets are very similar, if not exactly the same, due to the use of averaging functions when imputing the NA measurements. The mean values are the same, at **10766.19** steps, while the median value is slightly larger for the imputed data set, at **10766.19** steps, rather than **10765** steps.
 
-If histograms of the two data sets (imputed and non-imputed) are compared:
-
-```{r}
-par(mfrow = c(1, 2))
-
-hist(totalStepsDay$steps, breaks=20, xlab="Number of Steps Taken", 
-     col=paletteBlue(22), family="serif", ylim=c(0, 20), main=NULL)
-hist(imputedTotalStepsDay$steps, breaks=20, xlab="Number of Steps Taken", 
-     col=paletteRed(22), family="serif", ylim=c(0, 20), main=NULL)
-mtext("Histograms of Total Number of Steps Taken per Day, Without/With Imputed Values",
-      adj=0.95, family="serif", font=2)
+```{r, weekdays plot}
+ggplot(activity_imp_weekends_plot, aes(x = interval, y = steps_weekdays_interval))+
+          geom_line()+
+          facet_wrap(.~weekend_weekday)
 ```
 
-It can be seen that the frequency of values increases in the second histogram, which is expected, due to the imputed values. 
-
-More explanations for the differences between the non and imputed data sets can be seen by looking at the NA values grouped by their date variable.
-
-```{r}
-naByDate <- initialData[is.na(initialData$steps), ]
-table(naByDate$date)
-```
-
-As there are exactly 288 intervals measured for each day:
-
-```{r}
-length(unique(data$interval))
-```
-
-It is therefore shown by the above table, that in the initial data set, missing observations are due to entirely missed days, (8 of the days) where no measurements were made whatsoever. This therefore reinforces that the imputing technique used, of utilising average interval data, was likely more useful than potentially using average daily data.
-
-### Question 5: Are there differences in activity patterns between weekdays and weekends?
-
-The question indicates that the imputed data set should be used to answer this problem.  
-To help in answering this question, firstly a new factor variable should be created within the data frame. This should indicate whether each day is a "weekday" or a "weekend".
-
-To achieve this, I used the weekdays function to automatically calculate the day of the week each day resided upon, (Monday, Tuesday, etc.) Next, I wrote a for loop, which would assign the factor value "weekend" to all rows it read as having the values "Saturday" or "Sunday", and assign "weekday" to the others.
-
-```{r}
-daysData <- imputedData
-daysData$days <- weekdays(daysData$date)
-daysData$weekday <- as.character(rep(0, times=17568))
-for(x in 1:17568) {
-    if(daysData[x, 4] %in% c("Saturday", "Sunday")) {
-        daysData[x, 5] <- "weekend"
-    } else {
-        daysData[x, 5] <- "weekday"
-    }
-}
-daysData$weekday <- factor(daysData$weekday)
-head(daysData)
-```
-
-To compare the weekday and weekend data, and create two plots of the average number of steps taken per interval, the data has to be split into two groups of weekday/weekend data, using the newly created variable.
-
-```{r}
-weekdayData <- daysData[daysData$weekday=="weekday", ]
-weekendData <- daysData[daysData$weekday=="weekend", ]
-```
-
-Next, the average number of steps per interval is calculated, much like it has been done in previous questions.
-
-```{r}
-weekdayMean <- aggregate(steps ~ interval, weekdayData, mean)
-weekendMean <- aggregate(steps ~ interval, weekendData, mean)
-```
-
-Finally the panel plot is created. The x axis indicates each 5 minute interval, and the y axis shows the average number of steps taken. The two plots are divided into weekday, and weekend data.
-
-```{r}
-par(mfrow=c(2, 1), mar=c(4, 4.1, 3, 2.1))
-plot(weekdayMean$interval, weekdayMean$steps, type="l",
-     main="Time Series Plot of Average Steps Taken per Interval, for Weekdays",
-     xlab="Intervals (in 5 mins)", ylab="Number of Steps", family="serif",
-     col="darkred", lwd=1.5, ylim=c(0, 230))
-plot(weekendMean$interval, weekendMean$steps, type="l",
-     main="Time Series Plot of Average Steps Taken per Interval, for Weekends",
-     xlab="Intervals (in 5 mins)", ylab="Number of Steps", family="serif",
-     col="darkblue", lwd=1.5, ylim=c(0, 230))
-```
